--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
 				</div>
 				<nav class="hidden md:flex gap-8">
 					<a href="#about"
-						class="text-base font-semibold text-white/60 hover:text-white transition-colors">Обо
-						мне</a>
+						class="text-sm font-bold uppercase tracking-widest text-white/60 hover:text-white transition-colors">ОБО
+						МНЕ</a>
 					<a href="#services"
-						class="text-base font-semibold text-white/60 hover:text-white transition-colors">Спектр
-						услуг</a>
+						class="text-sm font-bold uppercase tracking-widest text-white/60 hover:text-white transition-colors">СПЕКТР
+						УСЛУГ</a>
 					<a href="#benefits"
-						class="text-base font-semibold text-white/60 hover:text-white transition-colors">Преимущества</a>
+						class="text-sm font-bold uppercase tracking-widest text-white/60 hover:text-white transition-colors">ПРЕИМУЩЕСТВА</a>
 				</nav>
 				<a :href="$store.contact.telegram" target="_blank" rel="noopener"
 					class="glass-btn-sm text-sm font-bold uppercase tracking-widest px-6 py-2.5 rounded-full flex items-center gap-2 group">
@@ -90,7 +90,7 @@
 
 				<div class="mt-10 flex flex-col sm:flex-row gap-4 w-full sm:w-auto items-center">
 					<a :href="$store.contact.telegram" target="_blank" rel="noopener" id="main-cta-telegram"
-						class="glass-btn-primary px-8 py-4 sm:py-5 rounded-2xl text-[1.1rem] font-bold flex items-center justify-center gap-3 w-full sm:w-auto group relative overflow-hidden">
+						class="glass-btn-primary px-8 py-4 sm:py-5 rounded-2xl font-bold flex items-center justify-center gap-3 w-full sm:w-auto group relative overflow-hidden">
 						<div
 							class="absolute inset-0 bg-white/20 translate-y-full group-hover:translate-y-0 transition-transform duration-300 ease-out">
 						</div>
@@ -99,11 +99,14 @@
 							<path
 								d="M11.944 0A12 12 0 0 0 0 12a12 12 0 0 0 12 12 12 12 0 0 0 12-12A12 12 0 0 0 12 0a12 12 0 0 0-.056 0zm4.962 7.224c.1-.002.321.023.465.14a.506.506 0 0 1 .171.325c.016.093.036.306.02.472-.18 1.898-.962 6.502-1.36 8.627-.168.9-.499 1.201-.82 1.23-.696.065-1.225-.46-1.9-.902-1.056-.693-1.653-1.124-2.678-1.8-1.185-.78-.417-1.21.258-1.91.177-.184 3.247-2.977 3.307-3.23.007-.032.014-.15-.056-.212s-.174-.041-.249-.024c-.106.024-1.793 1.14-5.061 3.345-.48.33-.913.49-1.302.48-.428-.008-1.252-.241-1.865-.44-.752-.245-1.349-.374-1.297-.789.027-.216.325-.437.893-.663 3.498-1.524 5.83-2.529 6.998-3.014 3.332-1.386 4.025-1.627 4.476-1.635z" />
 						</svg>
-						<span class="relative z-10">Узнать стоимость работы</span>
+						<span class="relative z-10 uppercase tracking-widest text-[0.8rem] sm:text-[0.95rem]">УЗНАТЬ
+							СТОИМОСТЬ РАБОТЫ</span>
 					</a>
 					<a href="#services" id="secondary-cta-services"
-						class="glass-btn-secondary px-8 py-4 sm:py-5 rounded-2xl text-[1.1rem] font-bold flex items-center justify-center w-full sm:w-auto group">
-						<span class="group-hover:text-white text-white/80 transition-colors">Спектр услуг</span>
+						class="glass-btn-secondary px-8 py-4 sm:py-5 rounded-2xl font-bold flex items-center justify-center w-full sm:w-auto group">
+						<span
+							class="group-hover:text-white text-white/80 transition-colors uppercase tracking-widest text-[0.8rem] sm:text-[0.95rem]">СПЕКТР
+							УСЛУГ</span>
 					</a>
 				</div>
 
@@ -466,13 +469,14 @@
 					</div>
 					<div class="relative z-10 flex-shrink-0">
 						<a :href="$store.contact.telegram" target="_blank" rel="noopener" id="footer-cta-telegram"
-							class="glass-btn-primary px-8 py-5 rounded-2xl text-[1.1rem] font-bold flex items-center justify-center gap-3 whitespace-nowrap shadow-[0_0_40px_rgba(92,124,250,0.3)] hover:shadow-[0_0_60px_rgba(92,124,250,0.5)] transition-shadow">
+							class="glass-btn-primary px-8 py-5 rounded-2xl font-bold flex items-center justify-center gap-3 whitespace-nowrap shadow-[0_0_40px_rgba(92,124,250,0.3)] hover:shadow-[0_0_60px_rgba(92,124,250,0.5)] transition-shadow">
 							<span class="relative flex h-3 w-3">
 								<span
 									class="animate-ping absolute inline-flex h-full w-full rounded-full bg-green-400 opacity-75"></span>
 								<span class="relative inline-flex rounded-full h-3 w-3 bg-green-500"></span>
 							</span>
-							Написать в Telegram
+							<span class="uppercase tracking-widest text-[0.85rem] sm:text-[1rem]">НАПИСАТЬ В
+								TELEGRAM</span>
 						</a>
 					</div>
 				</div>
