#4 - fully reverted bg-[#050505] on html tag to fix missing blobs layer

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru" class="scroll-smooth bg-[#050505]">
+<html lang="ru" class="scroll-smooth">
 
 <head>
 	<meta charset="UTF-8">
