--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	class="bg-[#050505] min-h-screen text-white font-sans antialiased overflow-x-hidden selection:bg-primary-500 selection:text-white"
 	x-data="{ scrolled: false }" @scroll.window="scrolled = (window.pageYOffset > 50)">
 
-	<div class="fixed inset-0 pointer-events-none z-[-1] overflow-hidden">
+	<div class="fixed top-0 left-0 w-full h-[100lvh] pointer-events-none z-[-1] overflow-hidden">
 		<div
 			class="absolute w-[800px] h-[800px] -top-40 -left-40 bg-primary-600/30 rounded-full mix-blend-screen filter blur-[120px] animate-blob">
 		</div>
