--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
 		content="Профессиональный автор студенческих работ. Курсовые, дипломные, диссертации, эссе. Аспирант, 9+ лет опыта, более 1500 сданных работ. Гарантия качества.">
 	<link rel="icon" type="image/svg+xml" href="/favicon.svg">
 	<link rel="canonical" href="https://studrabot.ru/">
+	<link rel="preload" href="/fonts/inter-bold.woff2" as="font" type="font/woff2" crossorigin>
+	<link rel="preload" href="/fonts/inter-extrabold.woff2" as="font" type="font/woff2" crossorigin>
 	<link rel="stylesheet" href="/src/style.css">
 	<script type="module" src="/src/main.js"></script>
 </head>
 
 <body
-	class="bg-[#050505] min-h-screen text-white font-sans antialiased overflow-x-hidden selection:bg-primary-500 selection:text-white"
-	x-data="{ scrolled: false }" @scroll.window="scrolled = (window.pageYOffset > 50)">
+	class="bg-[#050505] min-h-screen text-white font-sans antialiased overflow-x-hidden selection:bg-primary-500 selection:text-white">
 
 	<div class="fixed top-0 left-0 w-full h-[100lvh] pointer-events-none z-[-1] overflow-hidden">
 		<div
@@ -30,8 +31,7 @@
 		<div class="absolute inset-0 noise-overlay mix-blend-overlay pointer-events-none"></div>
 	</div>
 
-	<header class="fixed top-0 w-full z-50 transition-all duration-500"
-		:class="scrolled ? 'bg-[#050505]/60 backdrop-blur-2xl border-b border-white/[0.08] shadow-2xl py-3' : 'bg-transparent border-transparent py-6'">
+	<header id="site-header" class="fixed top-0 w-full z-50 py-6 bg-transparent border-transparent">
 		<div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
 			<div class="flex items-center justify-between">
 				<div class="flex items-center gap-3">
@@ -58,7 +58,7 @@
 						class="text-sm font-bold uppercase tracking-widest text-white/60 hover:text-white transition-colors">ЧАСТЫЕ
 						ВОПРОСЫ</a>
 				</nav>
-				<a :href="$store.contact.telegram" target="_blank" rel="noopener"
+				<a href="#" data-href="telegram" target="_blank" rel="noopener"
 					class="glass-btn-sm text-sm font-bold uppercase tracking-widest px-6 py-2.5 rounded-full flex items-center gap-2 group">
 					<span class="w-1.5 h-1.5 rounded-full bg-green-400 animate-pulse"></span>
 					НА СВЯЗИ
@@ -90,7 +90,7 @@
 				</p>
 
 				<div class="mt-8 flex flex-col sm:flex-row gap-4 w-full sm:w-auto items-center">
-					<a :href="$store.contact.telegram" target="_blank" rel="noopener" id="main-cta-telegram"
+					<a href="#" data-href="telegram" target="_blank" rel="noopener" id="main-cta-telegram"
 						class="glass-btn-primary px-8 py-4 sm:py-5 rounded-2xl font-bold flex items-center justify-center gap-3 w-full sm:w-auto group relative overflow-hidden">
 						<div
 							class="absolute inset-0 bg-white/20 translate-y-full group-hover:translate-y-0 transition-transform duration-300 ease-out">
@@ -112,7 +112,7 @@
 				</div>
 
 				<div
-					class="mt-6 flex flex-wrap justify-center gap-x-6 gap-y-2 text-xs font-semibold tracking-wide text-white/40 uppercase">
+					class="mt-6 flex flex-wrap justify-center gap-x-6 gap-y-2 text-xs font-bold tracking-wide text-white/40 uppercase">
 					<span class="flex items-center gap-1.5"><svg class="w-4 h-4 text-green-400" fill="none"
 							viewBox="0 0 24 24" stroke="currentColor">
 							<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7">
@@ -350,7 +350,7 @@
 						<div
 							class="w-14 h-14 rounded-full bg-blue-500/20 border border-blue-400/30 flex items-center justify-center mb-4 text-lg font-black text-blue-300 shadow-[0_0_20px_rgba(116,143,252,0.2)]">
 							1</div>
-						<h4 class="font-bold text-lg mb-2 text-white">Оценка</h4>
+						<h3 class="font-bold text-lg mb-2 text-white">Оценка</h3>
 						<p class="text-sm text-white/50 font-medium leading-relaxed">Вы присылаете методичку и
 							требования. Я изучаю их и называю точную стоимость.</p>
 					</div>
@@ -359,7 +359,7 @@
 						<div
 							class="w-14 h-14 rounded-full bg-purple-500/20 border border-purple-400/30 flex items-center justify-center mb-4 text-lg font-black text-purple-300 shadow-[0_0_20px_rgba(177,151,252,0.2)]">
 							2</div>
-						<h4 class="font-bold text-lg mb-2 text-white">План работы</h4>
+						<h3 class="font-bold text-lg mb-2 text-white">План работы</h3>
 						<p class="text-sm text-white/50 font-medium leading-relaxed">Составляем подробный драфт и
 							структуру работы для утверждения с научным руководителем.</p>
 					</div>
@@ -368,7 +368,7 @@
 						<div
 							class="w-14 h-14 rounded-full bg-orange-500/20 border border-orange-400/30 flex items-center justify-center mb-4 text-lg font-black text-orange-300 shadow-[0_0_20px_rgba(255,146,43,0.2)]">
 							3</div>
-						<h4 class="font-bold text-lg mb-2 text-white">Написание по главам</h4>
+						<h3 class="font-bold text-lg mb-2 text-white">Написание по главам</h3>
 						<p class="text-sm text-white/50 font-medium leading-relaxed">Пишу и сдаю работу частями. Это
 							безопасно и позволяет вносить коррективы на лету.</p>
 					</div>
@@ -377,7 +377,7 @@
 						<div
 							class="w-14 h-14 rounded-full bg-green-500/20 border border-green-400/30 flex items-center justify-center mb-4 text-lg font-black text-green-300 shadow-[0_0_20px_rgba(105,219,124,0.2)]">
 							4</div>
-						<h4 class="font-bold text-lg mb-2 text-white">Оформление и защита</h4>
+						<h3 class="font-bold text-lg mb-2 text-white">Оформление и защита</h3>
 						<p class="text-sm text-white/50 font-medium leading-relaxed">Проверка на Антиплагиат, строгий
 							ГОСТ и бесплатные правки до самой защиты.</p>
 					</div>
@@ -397,8 +397,8 @@
 
 					<div class="columns-1 lg:columns-2 gap-5 [&>*]:mb-5 [&>*]:break-inside-avoid">
 
-						<div class="glass-card rounded-2xl overflow-hidden" x-data="{ open: false }">
-							<button @click="open = !open"
+						<div class="glass-card rounded-2xl overflow-hidden" data-faq-item>
+							<button data-faq
 								class="w-full flex items-center justify-between gap-4 p-6 lg:p-7 text-left focus:outline-none hover:bg-white/[0.03] transition-colors">
 								<div class="flex items-center gap-4">
 									<div
@@ -412,14 +412,14 @@
 									<span class="font-bold text-[1.05rem] text-white leading-snug">Точно не через
 										ChatGPT?</span>
 								</div>
-								<svg class="w-5 h-5 text-white/40 transform transition-transform duration-300 flex-shrink-0"
-									:class="{ 'rotate-180': open }" fill="none" viewBox="0 0 24 24"
+								<svg data-faq-icon class="w-5 h-5 text-white/40 transform transition-transform duration-300 flex-shrink-0"
+									data-faq-icon fill="none" viewBox="0 0 24 24"
 									stroke="currentColor">
 									<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
 										d="M19 9l-7 7-7-7" />
 								</svg>
 							</button>
-							<div x-show="open" x-collapse.duration.300ms x-transition>
+							<div data-faq-content>
 								<div
 									class="px-6 lg:px-7 pb-6 lg:pb-7 text-white/60 text-[0.95rem] leading-[1.7] border-t border-white/5 pt-5">
 									Точно. Пишу руками, с нуля, по реальным источникам. Никаких нейросетей.
@@ -429,8 +429,8 @@
 							</div>
 						</div>
 
-						<div class="glass-card rounded-2xl overflow-hidden" x-data="{ open: false }">
-							<button @click="open = !open"
+						<div class="glass-card rounded-2xl overflow-hidden" data-faq-item>
+							<button data-faq
 								class="w-full flex items-center justify-between gap-4 p-6 lg:p-7 text-left focus:outline-none hover:bg-white/[0.03] transition-colors">
 								<div class="flex items-center gap-4">
 									<div
@@ -444,14 +444,14 @@
 									<span class="font-bold text-[1.05rem] text-white leading-snug">Сдавать через
 										неделю, успеете?</span>
 								</div>
-								<svg class="w-5 h-5 text-white/40 transform transition-transform duration-300 flex-shrink-0"
-									:class="{ 'rotate-180': open }" fill="none" viewBox="0 0 24 24"
+								<svg data-faq-icon class="w-5 h-5 text-white/40 transform transition-transform duration-300 flex-shrink-0"
+									data-faq-icon fill="none" viewBox="0 0 24 24"
 									stroke="currentColor">
 									<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
 										d="M19 9l-7 7-7-7" />
 								</svg>
 							</button>
-							<div x-show="open" x-collapse.duration.300ms x-transition style="display: none;">
+							<div data-faq-content>
 								<div
 									class="px-6 lg:px-7 pb-6 lg:pb-7 text-white/60 text-[0.95rem] leading-[1.7] border-t border-white/5 pt-5">
 									Скорее всего да. Курсовую могу сделать за 3 дня, диплом - от 7.
@@ -461,8 +461,8 @@
 							</div>
 						</div>
 
-						<div class="glass-card rounded-2xl overflow-hidden" x-data="{ open: false }">
-							<button @click="open = !open"
+						<div class="glass-card rounded-2xl overflow-hidden" data-faq-item>
+							<button data-faq
 								class="w-full flex items-center justify-between gap-4 p-6 lg:p-7 text-left focus:outline-none hover:bg-white/[0.03] transition-colors">
 								<div class="flex items-center gap-4">
 									<div
@@ -476,14 +476,14 @@
 									<span class="font-bold text-[1.05rem] text-white leading-snug">Препод завернет -
 										что тогда?</span>
 								</div>
-								<svg class="w-5 h-5 text-white/40 transform transition-transform duration-300 flex-shrink-0"
-									:class="{ 'rotate-180': open }" fill="none" viewBox="0 0 24 24"
+								<svg data-faq-icon class="w-5 h-5 text-white/40 transform transition-transform duration-300 flex-shrink-0"
+									data-faq-icon fill="none" viewBox="0 0 24 24"
 									stroke="currentColor">
 									<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
 										d="M19 9l-7 7-7-7" />
 								</svg>
 							</button>
-							<div x-show="open" x-collapse.duration.300ms x-transition style="display: none;">
+							<div data-faq-content>
 								<div
 									class="px-6 lg:px-7 pb-6 lg:pb-7 text-white/60 text-[0.95rem] leading-[1.7] border-t border-white/5 pt-5">
 									Это нормально, преподаватели всегда что-то просят поправить. Все правки
@@ -494,8 +494,8 @@
 							</div>
 						</div>
 
-						<div class="glass-card rounded-2xl overflow-hidden" x-data="{ open: false }">
-							<button @click="open = !open"
+						<div class="glass-card rounded-2xl overflow-hidden" data-faq-item>
+							<button data-faq
 								class="w-full flex items-center justify-between gap-4 p-6 lg:p-7 text-left focus:outline-none hover:bg-white/[0.03] transition-colors">
 								<div class="flex items-center gap-4">
 									<div
@@ -509,14 +509,14 @@
 									<span class="font-bold text-[1.05rem] text-white leading-snug">А вдруг в
 										универе узнают?</span>
 								</div>
-								<svg class="w-5 h-5 text-white/40 transform transition-transform duration-300 flex-shrink-0"
-									:class="{ 'rotate-180': open }" fill="none" viewBox="0 0 24 24"
+								<svg data-faq-icon class="w-5 h-5 text-white/40 transform transition-transform duration-300 flex-shrink-0"
+									data-faq-icon fill="none" viewBox="0 0 24 24"
 									stroke="currentColor">
 									<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
 										d="M19 9l-7 7-7-7" />
 								</svg>
 							</button>
-							<div x-show="open" x-collapse.duration.300ms x-transition style="display: none;">
+							<div data-faq-content>
 								<div
 									class="px-6 lg:px-7 pb-6 lg:pb-7 text-white/60 text-[0.95rem] leading-[1.7] border-t border-white/5 pt-5">
 									Не узнают. Работу никуда не выкладываю, в портфолио не использую.
@@ -526,8 +526,8 @@
 							</div>
 						</div>
 
-						<div class="glass-card rounded-2xl overflow-hidden" x-data="{ open: false }">
-							<button @click="open = !open"
+						<div class="glass-card rounded-2xl overflow-hidden" data-faq-item>
+							<button data-faq
 								class="w-full flex items-center justify-between gap-4 p-6 lg:p-7 text-left focus:outline-none hover:bg-white/[0.03] transition-colors">
 								<div class="flex items-center gap-4">
 									<div
@@ -541,14 +541,14 @@
 									<span class="font-bold text-[1.05rem] text-white leading-snug">Надо ли платить
 										все сразу?</span>
 								</div>
-								<svg class="w-5 h-5 text-white/40 transform transition-transform duration-300 flex-shrink-0"
-									:class="{ 'rotate-180': open }" fill="none" viewBox="0 0 24 24"
+								<svg data-faq-icon class="w-5 h-5 text-white/40 transform transition-transform duration-300 flex-shrink-0"
+									data-faq-icon fill="none" viewBox="0 0 24 24"
 									stroke="currentColor">
 									<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
 										d="M19 9l-7 7-7-7" />
 								</svg>
 							</button>
-							<div x-show="open" x-collapse.duration.300ms x-transition style="display: none;">
+							<div data-faq-content>
 								<div
 									class="px-6 lg:px-7 pb-6 lg:pb-7 text-white/60 text-[0.95rem] leading-[1.7] border-t border-white/5 pt-5">
 									Нет. Платите по главам: получили готовую часть, проверили с
@@ -557,8 +557,8 @@
 							</div>
 						</div>
 
-						<div class="glass-card rounded-2xl overflow-hidden" x-data="{ open: false }">
-							<button @click="open = !open"
+						<div class="glass-card rounded-2xl overflow-hidden" data-faq-item>
+							<button data-faq
 								class="w-full flex items-center justify-between gap-4 p-6 lg:p-7 text-left focus:outline-none hover:bg-white/[0.03] transition-colors">
 								<div class="flex items-center gap-4">
 									<div
@@ -572,14 +572,14 @@
 									<span class="font-bold text-[1.05rem] text-white leading-snug">А какой процент
 										в Антиплагиате будет?</span>
 								</div>
-								<svg class="w-5 h-5 text-white/40 transform transition-transform duration-300 flex-shrink-0"
-									:class="{ 'rotate-180': open }" fill="none" viewBox="0 0 24 24"
+								<svg data-faq-icon class="w-5 h-5 text-white/40 transform transition-transform duration-300 flex-shrink-0"
+									data-faq-icon fill="none" viewBox="0 0 24 24"
 									stroke="currentColor">
 									<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
 										d="M19 9l-7 7-7-7" />
 								</svg>
 							</button>
-							<div x-show="open" x-collapse.duration.300ms x-transition style="display: none;">
+							<div data-faq-content>
 								<div
 									class="px-6 lg:px-7 pb-6 lg:pb-7 text-white/60 text-[0.95rem] leading-[1.7] border-t border-white/5 pt-5">
 									Зависит от требований вашего ВУЗа. Обычно 70-85% и выше. Проверка
@@ -589,8 +589,8 @@
 							</div>
 						</div>
 
-						<div class="glass-card rounded-2xl overflow-hidden" x-data="{ open: false }">
-							<button @click="open = !open"
+						<div class="glass-card rounded-2xl overflow-hidden" data-faq-item>
+							<button data-faq
 								class="w-full flex items-center justify-between gap-4 p-6 lg:p-7 text-left focus:outline-none hover:bg-white/[0.03] transition-colors">
 								<div class="flex items-center gap-4">
 									<div
@@ -604,14 +604,14 @@
 									<span class="font-bold text-[1.05rem] text-white leading-snug">Можно ли
 										писать вам в процессе?</span>
 								</div>
-								<svg class="w-5 h-5 text-white/40 transform transition-transform duration-300 flex-shrink-0"
-									:class="{ 'rotate-180': open }" fill="none" viewBox="0 0 24 24"
+								<svg data-faq-icon class="w-5 h-5 text-white/40 transform transition-transform duration-300 flex-shrink-0"
+									data-faq-icon fill="none" viewBox="0 0 24 24"
 									stroke="currentColor">
 									<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
 										d="M19 9l-7 7-7-7" />
 								</svg>
 							</button>
-							<div x-show="open" x-collapse.duration.300ms x-transition style="display: none;">
+							<div data-faq-content>
 								<div
 									class="px-6 lg:px-7 pb-6 lg:pb-7 text-white/60 text-[0.95rem] leading-[1.7] border-t border-white/5 pt-5">
 									Да, пишите в Telegram в любое время. Отвечаю сама, без менеджеров
@@ -638,7 +638,7 @@
 						Пришлите тему и методичку - назову точную стоимость.
 					</p>
 
-					<a :href="$store.contact.telegram" target="_blank" rel="noopener" id="footer-cta-telegram"
+					<a href="#" data-href="telegram" target="_blank" rel="noopener" id="footer-cta-telegram"
 						class="glass-btn-primary inline-flex items-center justify-center gap-3 px-10 py-5 rounded-2xl font-bold shadow-[0_0_40px_rgba(92,124,250,0.3)] hover:shadow-[0_0_70px_rgba(92,124,250,0.5)] hover:scale-[1.02] transition-all duration-300 group relative overflow-hidden">
 						<div
 							class="absolute inset-0 bg-white/20 translate-y-full group-hover:translate-y-0 transition-transform duration-300 ease-out">
@@ -692,20 +692,20 @@
 					<p class="text-white/40 text-sm font-medium">Безупречный академический результат.</p>
 				</div>
 				<div class="flex gap-4">
-					<a :href="$store.contact.vk" target="_blank" rel="noopener" aria-label="VK" class="social-btn">
+					<a href="#" data-href="vk" target="_blank" rel="noopener" aria-label="VK" class="social-btn">
 						<svg class="w-5 h-5" aria-hidden="true" viewBox="0 0 24 24" fill="currentColor">
 							<path
 								d="M15.684 0H8.316C1.592 0 0 1.592 0 8.316v7.368C0 22.408 1.592 24 8.316 24h7.368C22.408 24 24 22.408 24 15.684V8.316C24 1.592 22.391 0 15.684 0zm3.692 17.123h-1.744c-.66 0-.864-.525-2.05-1.727-1.033-1-1.49-1.135-1.744-1.135-.356 0-.458.102-.458.593v1.575c0 .424-.135.678-1.253.678-1.846 0-3.896-1.118-5.335-3.202C4.624 10.857 4.03 8.57 4.03 8.096c0-.254.102-.491.593-.491h1.744c.44 0 .61.203.78.678.847 2.473 2.271 4.639 2.862 4.639.22 0 .322-.102.322-.66V9.721c-.068-1.186-.695-1.287-.695-1.71 0-.203.17-.407.44-.407h2.744c.373 0 .508.203.508.644v3.49c0 .373.17.508.271.508.22 0 .407-.135.813-.542 1.253-1.406 2.152-3.574 2.152-3.574.119-.254.322-.491.763-.491h1.744c.525 0 .644.27.525.644-.22 1.017-2.355 4.031-2.355 4.031-.186.305-.254.44 0 .78.186.254.796.779 1.203 1.253.745.847 1.32 1.558 1.473 2.05.17.49-.085.744-.576.744z" />
 						</svg>
 					</a>
-					<a :href="$store.contact.whatsapp" target="_blank" rel="noopener" aria-label="WhatsApp"
+					<a href="#" data-href="whatsapp" target="_blank" rel="noopener" aria-label="WhatsApp"
 						class="social-btn">
 						<svg class="w-5 h-5" aria-hidden="true" viewBox="0 0 24 24" fill="currentColor">
 							<path
 								d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 01-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 01-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 012.893 6.994c-.003 5.45-4.437 9.884-9.885 9.884m8.413-18.297A11.815 11.815 0 0012.05 0C5.495 0 .16 5.335.157 11.892c0 2.096.547 4.142 1.588 5.945L.057 24l6.305-1.654a11.882 11.882 0 005.683 1.448h.005c6.554 0 11.89-5.335 11.893-11.893a11.821 11.821 0 00-3.48-8.413z" />
 						</svg>
 					</a>
-					<a :href="$store.contact.instagram" target="_blank" rel="noopener" aria-label="Instagram"
+					<a href="#" data-href="instagram" target="_blank" rel="noopener" aria-label="Instagram"
 						class="social-btn">
 						<svg class="w-5 h-5" aria-hidden="true" viewBox="0 0 24 24" fill="currentColor">
 							<path
